--- a/Edtech.html
+++ b/Edtech.html
@@ -59,6 +59,56 @@
             </div>
         </nav>
     </header>
+    <div class="container  mt-5">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1 class="bg-dark fw-bold">Get To Learn And Started Digital Learning</h1>
+                        <p class="bg-info">Accelerate your career or business with an online digital skills course in
+                            everything from
+                            marketing to coding and beyond.From today - This is your passion</p>
+                        <button type="button" class="btn btn-primary">Get Started</button>
+
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1 class="bg-dark fw-bold">How To Get Start?</h1>
+                        <p class="bg-info">Closely Study Your Niche. One of the crucial steps of product development is
+                            to find a problem worth solving.
+                            Outline A Relevant Solution. Now, be more specific.
+                            Choose The Right Software Development Partner.
+                            Test Your Idea On Real Users</p>
+                        <button type="button" class="btn btn-primary">Get Started</button>
+
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+    </div>
 
 </body>
 
