--- a/Edtech.html
+++ b/Edtech.html
@@ -59,6 +59,9 @@
             </div>
         </nav>
     </header>
+
+    <!--Slider page-->
+
     <div class="container  mt-5">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
@@ -108,6 +111,18 @@
             </button>
         </div>
 
+    </div>
+
+    <!--Some text after 1st page-->
+
+
+    <div>
+        <h1 class="fw-bold">Let's Discover The Details</h1>
+        <h1>And all Cources</h1>
+        <h6>It is a long established fact that a reader will be distracted by the readable
+        </h6>
+        <h6>content of a page when looking at its layout.
+        </h6>
     </div>
 
 </body>
