--- a/Edtech.html
+++ b/Edtech.html
@@ -19,112 +19,115 @@
         crossorigin="anonymous"></script>
 
     <!--Nav bar set-->
+    <section>
 
 
-    <header>
-        <nav class="navbar navbar-expand-lg ">
-            <div class="container">
-                <a class="navbar-brand fw-bold fs-1 text" href="#">Learning
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+        <header>
+            <nav class="navbar navbar-expand-lg ">
+                <div class="container">
+                    <a class="navbar-brand fw-bold fs-1 text" href="#">Learning
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link " href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">All Courses</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link ">Register</a>
+                            <li class="nav-item">
+                                <a class="nav-link " href="#">Follow</a>
+                            </li>
+                            </li>
+                        </ul>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search Now" aria-label="Search">
+                            <button class="btn btn-outline-info" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <!--Slider page-->
+
+        <div class="container  mt-5">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1 class="bg-dark fw-bold">Get To Learn And Started Digital Learning</h1>
+                            <p class="bg-info">Accelerate your career or business with an online digital skills course
+                                in
+                                everything from
+                                marketing to coding and beyond.From today - This is your passion</p>
+                            <button type="button" class="btn btn-primary">Get Started</button>
+
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1 class="bg-dark fw-bold">How To Get Start?</h1>
+                            <p class="bg-info">Closely Study Your Niche. One of the crucial steps of product development
+                                is
+                                to find a problem worth solving.
+                                Outline A Relevant Solution. Now, be more specific.
+                                Choose The Right Software Development Partner.
+                                Test Your Idea On Real Users</p>
+                            <button type="button" class="btn btn-primary">Get Started</button>
+
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link " href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">All Courses</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link ">Register</a>
-                        <li class="nav-item">
-                            <a class="nav-link " href="#">Follow</a>
-                        </li>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search Now" aria-label="Search">
-                        <button class="btn btn-outline-info" type="submit">Search</button>
-                    </form>
-                </div>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-        </nav>
-    </header>
 
-    <!--Slider page-->
-
-    <div class="container  mt-5">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1 class="bg-dark fw-bold">Get To Learn And Started Digital Learning</h1>
-                        <p class="bg-info">Accelerate your career or business with an online digital skills course in
-                            everything from
-                            marketing to coding and beyond.From today - This is your passion</p>
-                        <button type="button" class="btn btn-primary">Get Started</button>
-
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1 class="bg-dark fw-bold">How To Get Start?</h1>
-                        <p class="bg-info">Closely Study Your Niche. One of the crucial steps of product development is
-                            to find a problem worth solving.
-                            Outline A Relevant Solution. Now, be more specific.
-                            Choose The Right Software Development Partner.
-                            Test Your Idea On Real Users</p>
-                        <button type="button" class="btn btn-primary">Get Started</button>
-
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
 
-    </div>
+    </section>
 
     <!--Some text after 1st page-->
-
-
-    <div>
+    <div class="text-center mt-5 ">
         <h1 class="fw-bold">Let's Discover The Details</h1>
         <h1>And all Cources</h1>
-        <h6>It is a long established fact that a reader will be distracted by the readable
+        <br>
+        <h6 class="text-muted">It is a long established fact that a reader will be distracted by the readable
         </h6>
-        <h6>content of a page when looking at its layout.
+        <h6 class="text-muted">content of a page when looking at its layout.
         </h6>
     </div>
-
 </body>
 
 </html>
