adding grif layout for some devices

--- a/Edtech.html
+++ b/Edtech.html
@@ -128,6 +128,93 @@
         <h6 class="text-muted">content of a page when looking at its layout.
         </h6>
     </div>
+
+    <!--All couse and details-->
+    <section class="container mt-5">
+
+
+        <div>
+
+            <div class="row">
+
+
+                <div class="col-12 col-md-6 col-lg-4 "><img src="images/course/course-1.png" alt="">
+
+                    <h4>Fundamental Of UI/UX Design
+                    </h4>
+                    <h6 class="text-muted">UX design is the process of discovering user needs and designing solutions to
+                        meet
+                        them.
+                    </h6>
+                    <h5 class="text-info text-bold ">Price : 20$
+                    </h5>
+
+
+                </div>
+
+                <div class="col"><img src="images/course/course-3.png" alt="">
+                    <h4>Fullstack Web Development
+                    </h4>
+                    <h6 class="text-muted">(like using JavaScript, jQuery, Angular, or Vue) Program a server (like using
+                        PHP, Python)
+
+                    </h6>
+                    <h5 class="text-info text-bold">Price : 20$
+                    </h5>
+                </div>
+
+                <div class="col"><img src="images/course/course-2.png" alt="">
+                    <h4>Javascript Basic to advanced
+                    </h4>
+                    <h6 class="text-muted">It can be done in just three months! Most employers will be happy to hire.
+
+                    </h6>
+                    <h5 class="text-info text-bold">Price : 20$
+                    </h5>
+                </div>
+
+                <div class="col"><img src="images/course/course-6.png" alt="">
+                    <h4>Motion Graphics
+                    </h4>
+                    <h6 class="text-muted">Motion graphics and are usually combined with audio for use in multimedia
+                        projects.
+
+                    </h6>
+                    <h5 class="text-info text-bold">Price : 20$
+                    </h5>
+                </div>
+
+                <div class="col"><img src="images/course/course-5.png" alt="">
+                    <h4>Photography Basic Rules
+                    </h4>
+                    <h6 class="text-muted">Some quick example text to build on the card title
+                        and make up the bulk of the card.
+
+                    </h6>
+                    <h5 class="text-info text-bold">Price : 20$
+                    </h5>
+                </div>
+
+                <div class="col"><img src="images/course/course-4.png" alt="">
+                    <h4>Digital Marketing
+
+                    </h4>
+                    <h6 class="text-muted">This includes not only email, social media, and web-based advertising.
+
+                    </h6>
+                    <h5 class="text-info text-bold">Price : 20$
+                    </h5>
+                </div>
+            </div>
+
+        </div>
+        </div>
+        <div class="text-center">
+            <button type="button" class="btn btn-primary p-3 ">See More Courses</button>
+
+        </div>
+    </section>
+
 </body>
 
 </html>
