Images and some info

--- a/Edtech.html
+++ b/Edtech.html
@@ -210,9 +210,45 @@
         </div>
         </div>
         <div class="text-center">
-            <button type="button" class="btn btn-primary p-3 ">See More Courses</button>
+            <button type="button" class="btn btn-primary p-3 mt-2">See More Courses</button>
 
         </div>
+    </section>
+
+    <!-- Image and text set -->
+
+    <section class="container d-flex">
+        <div>
+            <img src="images/working.png" alt="">
+        </div>
+        <div class="bg-secondary p-5 pe-5">
+            <h2>Explore The elearning Institute</h2>
+            <br>
+
+            <p><span>here are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or
+                    randomised words which don't look even slightly believable.Anything embarrassing hidden in the
+                    middle of
+                    text. All the Lorem Ipsum
+                    generators on the Internet tend to repeat predefined.</span></p>
+            <br>
+            <h6>
+                Computer learning software are online platforms that give companies and organizations ways to easily
+                create, store and manage learning materials for their employees to learn from.
+            </h6>
+            <br>
+            <h6>Any facility that offers technology education classes can be classified as a computer training center,
+                though public libraries, educational institutions and some job training resource centers typically have
+                computer labs and offer basic computer skills and software training as well.</h6>
+            <br>
+            <h3>500+ <small>Expert member</small></h3>
+            <h3>1k+ <small>Rating & Review</small></h3>
+            <br>
+            <button type="button" class="btn btn-primary p-">See More</button>
+
+
+        </div>
+
     </section>
 
 </body>
