--- a/Edtech.html
+++ b/Edtech.html
@@ -217,7 +217,7 @@
 
     <!-- Image and text set -->
 
-    <section class="container d-flex">
+    <section class="container d-flex mt-5">
         <div>
             <img src="images/working.png" alt="">
         </div>
