--- a/Edtech.html
+++ b/Edtech.html
@@ -251,6 +251,53 @@
 
     </section>
 
+    <!--Modal-->
+
+    <section class="container bg-secondary d-flex mt-5 p-5">
+
+        <div>
+            <H2>Are Yoy Ready to join?</H2>
+            <small>It is a long established fact that a reader will be
+                distracted by the</small>
+            <small>readable content of a page when looking at its layout.
+            </small>
+        </div>
+
+        <div>
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary p-2 mb-5" data-bs-toggle="modal"
+                data-bs-target="#exampleModal">
+                Register Now
+            </button>
+
+            <!-- Modal -->
+            <div>
+
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                Free Regidtration Here
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+
 </body>
 
 </html>
