Adding students info and image

--- a/Edtech.html
+++ b/Edtech.html
@@ -298,6 +298,61 @@
 
     </section>
 
+    <!--Some text about successfull students-->
+    <div class="text-center mt-5 ">
+        <h1 class="fw-bold">Here Is Out successfull</h1>
+        <h1>Studens</h1>
+        <br>
+        <h6 class="text-muted">Story is unique. That’s why we work closely with you to understand your particular
+            interests,
+        </h6>
+        <h6 class="text-muted">needs, and aspirations. Read on for stories of real students who know this first-hand,
+            and get inspired to create your own student success story!
+        </h6>
+    </div>
+
+
+
+    <div class="container  d-flex mt-5">
+        <div class="container overflow-hidden text-center">
+            <div>
+                <img src="images/student/student-4.png" alt="">
+                <h4> Ms.Shahida</h4>
+                <h6 class="text-muted">Web Developer
+
+                </h6>
+
+            </div>
+            <div class=" mt-4">
+                <img src="images/student/student-3.png" alt="">
+                <h4>Fahim Khan</h4>
+                <h6 class="text-muted">UIUX Designer
+
+
+                </h6>
+
+            </div>
+            <div class=" mt-4">
+                <img src="images/student/student-2.png" alt="">
+                <h4> Keya Rahman</h4>
+                <h6 class="text-muted">Motion Design
+
+                </h6>
+
+            </div>
+            <div class=" mt-4">
+                <img src="images/student/student-1.png" alt="">
+                <h4> Rasel Ahmed</h4>
+                <h6 class="text-muted">Graphic Designer
+
+                </h6>
+
+            </div>
+
+        </div>
+
+    </div>
+
 </body>
 
 </html>
