--- a/Edtech.html
+++ b/Edtech.html
@@ -353,6 +353,11 @@
 
     </div>
 
+    <div class="text-center">
+        <button type="button" class="btn btn-primary pl-5 pr-5 mt-2">View All</button>
+
+    </div>
+
 </body>
 
 </html>
