--- a/Edtech.html
+++ b/Edtech.html
@@ -468,6 +468,20 @@
     </section>
 
 
+    <div class="text-center mt-5 ">
+        <h1 class="fw-bold">Trusted by over 800+ companiess</h1>
+    </div>
+    <div class="d-flex container mt-5 bg-light">
+        <div><img src="images/company/company-1.png" alt="">Trusted--</div>
+        <div><img src="images/company/company-3.png" alt="">Connnected--</div>
+        <div><img src="images/company/company-6.png" alt="">Partner--</div>
+        <div><img src="images/company/company-2.png" alt="">Future Partner--</div>
+        <div><img src="images/company/company-3.png" alt="">Newly Added--</div>
+        <div><img src="images/company/company-4.png" alt="">Positivity</div>
+    </div>
+
+
+
 </body>
 
 </html>
