--- a/Edtech.html
+++ b/Edtech.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>edTech-website</title>
+    <script src="https://kit.fontawesome.com/959b9c55d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css
     ">
+
 
 
 
@@ -481,7 +483,28 @@
     </div>
 
 
+    <!--Footer-->
+
+    <footer">
+        <div class="row  bg-dark mt-5">
+            <div class="col text-white text-center ">
+                <h1 class="p-5 m-0">Learning
+                </h1>
+                <p class="m-0 fw-bold">Office Address:Sector 4,</p>
+                <br>
+                <p>Road 11, House 12 | For More info click now below -</p>
+                <p> <i class="fa-brands fa-facebook"></i> <i class="fa-brands fa-instagram"></i></p>
+                <p><i class="fa-brands fa-twitter"></i></p>
+            </div>
+        </div>
+
+
+        </footer>
+
 
 </body>
+
+
+
 
 </html>
